2001-11-01  Bruno Haible  <haible@clisp.cons.org>

	* javacomp.m4 (gt_JAVACOMP): Test for the existence of gcj, javac,
	jikes in $PATH. Needed because the call of a program not found in PATH
	yields return code 1 with SunOS 4 /bin/sh and is thus indistinguishable
	from a successful call returning 1.
	* javaexec.m4 (gt_JAVAEXEC): Likewise for gij, java, jre, jview.

2001-10-30  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_GNU_GETTEXT): Make sure "make dist" works even when
	configured with --disable-nls.

2001-10-21  Bruno Haible  <haible@clisp.cons.org>

	* mkdtemp.m4 (gt_FUNC_MKDTEMP): Also check for <inttypes.h>.

2001-10-21  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_GNU_GETTEXT): In INTLLIBS, use ${top_builddir}
	instead of $(top_builddir), so that the value can also be used in
	shell scripts. Note that in Makefiles both ${top_builddir} and
	$(top_builddir) are equivalent.

2001-10-09  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_GNU_GETTEXT): Add check for getc_unlocked.

2001-09-29  Bruno Haible  <haible@clisp.cons.org>

	* hostname.m4: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2001-10-10  Bruno Haible  <haible@clisp.cons.org>

	* javacomp.m4 (gt_JAVACOMP): Ignore gcj version 2.xx, require at least
	gcj 3.0.

2001-09-27  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_GNU_GETTEXT): Inline AM_WITH_NLS call.
	(AM_WITH_NLS): Remove macro.

2001-09-23  Bruno Haible  <haible@clisp.cons.org>

	* siginfo.m4: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2001-09-18  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_WITH_NLS): Test for msgmerge which understands the
	--update option.

2001-10-20  Bruno Haible  <haible@clisp.cons.org>

	Assume strchr() exists.
	* gettext.m4 (AM_GNU_GETTEXT): Remove check for strchr.

2001-09-17  Bruno Haible  <haible@clisp.cons.org>

	* backupfile.m4: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2001-09-25  Bruno Haible  <haible@clisp.cons.org>
